# sloppad

./: .gitignore  .goreleaser.yaml  .zenodo.json  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  THIRD_PARTY_LICENSES.md  go.mod  go.sum  package-lock.json  package.json  playwright.config.ts  playwright.e2e.config.ts  pyproject.toml  train_hotword_script_test.go  tsconfig.json
docs/: architecture.md  auxiliary-surfaces.md  design-lineage.md  extension-platform-whitepaper.md  helpy-recovery-issue-pack.md  interaction-grammar.md  interfaces.md  meeting-notes-privacy.md  meeting-partner-whitepaper.md  model-download-policy.md  native-clients.md  object-scoped-intent-ui.md  plugins.md  release-v0.0.1.md  release-v0.0.4.md  release-v0.0.5.md  release-v0.0.6.md  release-v0.0.7.md  release-v0.1.4.md  release-v0.1.6.md  release-v0.2.0.md  review-mode-workflow.md  spec-index.md
scripts/: build-frontend.mjs  build-voxtype-macos.sh  codex-local.sh  dev-setup.sh  e2e-local.sh  fetch-hotword-assets.sh  generate-package-manager-artifacts.sh  hotword-config.yaml  hotword-generate-qwen3tts.py  hotword-generate-qwen3tts.sh  install-slopshell-user-units.sh  install-tabura-user-units.sh  install.ps1  install.sh  piper_tts_server.py  playtest.sh  playwright.sh  setup-claude-mcp.sh  setup-codex-mcp.sh  setup-intent-classifier.sh  setup-local-llm.sh  setup-local-vllm.sh  setup-slopshell-mcp.sh  setup-stt-sidecar.sh  setup-tabura-f5-tts.sh  setup-voxtype-stt.sh  setup-whisper-stt.sh  slsh-smoke.sh  tabura-dev-restart.sh  test-codex-local-providers.sh  test-reports.sh  (+1 more)
(+528 files in other folders)
